Correctly aligned the circles vertically

--- a/style.css
+++ b/style.css
@@ -14,9 +14,11 @@
   width: 54px;
   position: sticky;
   position: -webkit-sticky; /* Safari */
-  top: 35%;
+  top: 50%;
   height: 202px;
   z-index: 2;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
 }
 
 .divider {
